k8s/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      name: mealie
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: hkotel/mealie:latest
        imagePullPolicy: Always
        ports:
          - name: mealie
            containerPort: 6789
        volumeMounts:
        - mountPath: "/config"
          name: mealie-config
        - mountPath: "/downloads/completed"
          name: completed-downloads
      nodeSelector:
        mealie: "true"
      volumes:
      - name: mealie-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.mealie-config
          lun: 1
          fsType: ext4
          readOnly: false
      - name: completed-downloads
        nfs:
          server: library.faircloth.ca
          path: /volume1/downloads/completed
      dnsConfig:
        options:
        - name: ndots
          value: "1"
