k8s/mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie 
spec:
  replicas: 1
  serviceName: mealie
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      name: mealie
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v1.0.0-RC1.1
        imagePullPolicy: Always
        ports:
          - name: mealie
            containerPort: 9000
        volumeMounts:
        - mountPath: "/app/data"
          name: mealie-data
      volumes:
        - name: mealie-data
          iscsi:
            targetPortal: 10.10.11.5:3260
            iqn: iqn.2000-01.com.synology:Library.mealie-data
            lun: 1
            fsType: ext4
            readOnly: false
      dnsConfig:
        options:
        - name: ndots
          value: "1"
