k8s/mealie/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
